@@ -1,3 +1,6 @@
+2015-01-29  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/dumper.c: Fix retry handling.
+
 2015-01-28  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/selfcheck.c: (print_platform): Do not execute
 	  /usr/bin/sw_vers if it doesn't exists.
